[package]
name = "Lucifer"
version = "0.1.0"
edition = "2021"
author = "0xhades"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "stream", "rustls-tls", "socks"] }
tokio = { version = "1.20.0", features = ["full"] }
async-trait = "0.1.57"
rand = "0.8.5"
serde_json = "1.0.83"
regex = "1.6.0"
base64 = "0.13.0"
clap = "3.2.17"
crossterm = "0.25.0"
serde = { version = "1.0.143", features = ["derive"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.131"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"